--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 <distributionManagement>
     <repository>
       <id>github</id>
-      <name>GitHub Packages</name>
+      <name>Github trianipm</name>
       <url>https://maven.pkg.github.com/trianipm/yu</url>
     </repository>
   </distributionManagement>
